# dgx-autopilot

./: README  compile_all.sh
apps/cockpit_player/: CMakeLists.txt  Makefile  cockpit_player.cc  cockpit_player.h
apps/demo_app/: CMakeLists.txt  Makefile  autopilot.cc  command_protocol.h  ground_station.cc  ground_station.h
projs/libdata_stream/: CMakeLists.txt  Makefile  Makefile.include
projs/libdata_stream/include/: euler_angles_integral.h  generators.h  static_filter.h
projs/libdata_stream/include/stream/: async_stream_connection.h  collector.h  connection.h  data_pop_stream.h  euler_angles_integral.h  func_filter.h  generators.h  static_filter.h  stream_connection.h  stream_converters.h  stream_exporter.h  stream_importer.h
projs/libdata_stream/include/stream/filters/: acc_compass_rot.h  euler_angles_integral.h  integral_filter.h  kalman_filter.h  low_pass_filter.h  matrix_to_euler_filter.h  rotation_integral.h
projs/libdata_stream/include/stream/util/: lin_algebra.h  stream_player.h  time.h
projs/libdata_stream/src/: async_stream_connection.cc  async_stream_connection.h  async_stream_connection.inl  connection.h  data_filter.h  data_push_stream.h  func_filter.h  generators.h  integral_filter.h  protocol.h  static_filter.h  stream_connection.cc  stream_connection.h  stream_connection.inl  stream_converters.h  stream_exporter.cc  stream_exporter.h  stream_importer.cc  stream_importer.h  stream_utils.h  tcpip_connection.cc
projs/libdata_stream/src/filters/: acc_compass_rot.cc  acc_compass_rot.h  acc_to_euler_filter.cc  acc_to_euler_filter.h  euler_angles_integral.cc  euler_angles_integral.h  fps_filter.h  fps_filter.inl  gyro_to_av_matrix.cc  gyro_to_av_matrix.h  integral_filter.h  kalman_filter.cc  kalman_filter.h  kalman_filter.inl  low_pass_filter.h  low_pass_filter.inl  matrix_to_euler_filter.cc  matrix_to_euler_filter.h  rotation_integral.cc  rotation_integral.h  static_filter.h  stream_recorder.h  stream_recorder.inl  watch_filter.h
projs/libdata_stream/src/util/: lin_algebra.h  stream_player.h  stream_player.inl  tcpip_connection.cc  tcpip_connection.h  time.h  udpip_connection.cc  udpip_connection.h
projs/libdata_stream/tests/: async_stream_conn_test.cc  exporter_test.cc  integral_test.cc  low_pass_test.cc  recorder_test.cc  static_filter_test.cc  stream_conn_test.cc  tcpip_conn_test.cc  udpip_conn_test.cc  watch_test.cc
trunk/projs/: CMakeLists.txt  Makefile  Makefile.include  TODO  dgx-config.cmake.in
trunk/projs/autopilot/: CMakeLists.txt  Makefile  Makefile.include
trunk/projs/autopilot/hw/: adxl345_acc.cc  adxl345_acc.h  hmc5843_compass.h  itg3200_gyro.cc  itg3200_gyro.h
trunk/projs/autopilot/include/autopilot/: cockpit.h  waypoint_pilot.h
trunk/projs/autopilot/sandbox/: acc_watch_test.cc  gyro_watch_test.cc  orientation_test.cc  orientation_watch_test.cc  sensor_watch_test.cc  servo_stress_test.cc
trunk/projs/autopilot/src/: cockpit.cc  cockpit.h  cockpit.inl  fusion_filter.cc  fusion_filter.h  gps_filter.cc  gps_filter.h  stability_augmenting_pilot.cc  stability_augmenting_pilot.h  waypoint_pilot.cc  waypoint_pilot.h
trunk/projs/autopilot/src/common/: exceptions.h
trunk/projs/autopilot/src/interfaces/: plain_cockpit.h  plain_platform.h  servo.h  servo_stream.h
trunk/projs/autopilot/src/platform/: dgx1_platform.cc  dgx1_platform.h  dgx1_simulator_platform.cc  dgx1_simulator_platform.h  flapron_controller.cc  flapron_controller.h  platform_export_import.cc
trunk/projs/autopilot/src/sandbox/: baro_test.cc  cockpit_test.cc  cockpit_test_device.cc  gps_test.cc  pitot_test.cc  sensor_watch_test.cc  waypoint_pilot_test.cc
trunk/projs/autopilot/src/tests/: test_gps_filter.cc
trunk/projs/autopilot/tests/: integral_test.cc  static_filter_test.cc
trunk/projs/autopilot/util/: time.h
trunk/projs/ground_station/: CMakeLists.txt  Makefile  Makefile.include  ground_station.pro
trunk/projs/ground_station/include/gs/: 3d_stream_view.h  map_stream_view.h  orientation_stream_view.h  size_push_gen.h
trunk/projs/ground_station/src/: 3d_stream_view.cc  3d_stream_view.h  label_stream_view.h  main.cc  map_stream_view.cc  map_stream_view.h  orientation_stream_view.cc  orientation_stream_view.h  size_push_gen.cc  size_push_gen.h  size_stream_view.h
trunk/projs/ground_station/src/external_widgets/: heading_widget.cc  orientation_widget.cc
trunk/projs/libdata_stream/: Makefile  Makefile.include
trunk/projs/libdata_stream/include/: euler_angles_integral.h  generators.h  integral_filter.h  static_filter.h
trunk/projs/libdata_stream/include/stream/: data_filter.h  data_push_stream.h  integral_filter.h  stream_utils.h  tcpip_connection.h
trunk/projs/libdata_stream/src/: async_stream_connection.cc  async_stream_connection.h  async_stream_connection.inl  collector.h  data_filter.h  data_pop_stream.h  data_push_stream.h  euler_angles_integral.h  func_filter.h  generators.h  protocol.h  static_filter.h  stream_connection.cc  stream_connection.h  stream_connection.inl  stream_exception.h  stream_exporter.cc  stream_exporter.h  stream_importer.cc  stream_importer.h  stream_utils.h  tcpip_connection.cc  tcpip_connection.h
trunk/projs/libdata_stream/src/util/: time.h  (+7 more)
trunk/projs/libdata_stream/tests/: async_stream_conn_test.cc  exporter_test.cc  fps_test.cc  func_filter_test.cc  integral_test.cc  low_pass_test.cc  recorder_test.cc  static_filter_test.cc  stream_conn_test.cc  tcpip_conn_test.cc  udpip_conn_test.cc
trunk/projs/simulator/: CMakeLists.txt  Makefile  Makefile.include  camera.h  main.cc  plain.cc  plain.h  plane.cc  plane.h  sensor.h
trunk/projs/simulator/media/: Arrow.X  pf-cessna-182.x
trunk/projs/simulator/sensors/: simulator_accelerometer.h  simulator_altmeter.cc  simulator_altmeter.h
trunk/projs/simulator/src/: camera.cc  carriable.h  main.cc  plain.h  platforms.cc  simulator.cc  simulator.h  simulator_platform.cc  simulator_platform.h  wind_gen.cc  wind_gen.h
trunk/projs/stream_watch/: Makefile  Makefile.include
trunk/projs/stream_watch/device/: Makefile  Makefile.include
trunk/projs/stream_watch/host/: Makefile
(+349 files in other folders)
